--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,13 @@
 aiohappyeyeballs==2.6.1
-aiohttp==3.12.13
-aiosignal==1.3.2
+aiohttp==3.12.14
+aiosignal==1.4.0
 annotated-types==0.7.0
 anyio==4.9.0
 async-timeout==4.0.3
 attrs==25.3.0
 CacheControl==0.14.3
 cachetools==5.5.2
-certifi==2025.6.15
+certifi==2025.7.14
 cffi==1.17.1
 charset-normalizer==3.4.2
 click==8.1.8
@@ -15,26 +15,28 @@ cryptography==45.0.5
 dataclasses-json==0.6.7
 dnspython==2.7.0
 email_validator==2.2.0
+environs==9.5.0
 exceptiongroup==1.3.0
-fastapi==0.115.13
-fastapi-cli==0.0.7
+fastapi==0.116.1
+fastapi-cli==0.0.8
 filetype==1.2.0
-firebase-admin==6.9.0
+firebase_admin==7.0.0
 frozenlist==1.7.0
 google-ai-generativelanguage==0.6.18
 google-api-core==2.25.1
-google-api-python-client==2.174.0
+google-api-python-client==2.176.0
 google-auth==2.40.3
 google-auth-httplib2==0.2.0
 google-cloud-core==2.4.3
 google-cloud-datastore==2.21.0
 google-cloud-firestore==2.21.0
-google-cloud-storage==2.19.0
+google-cloud-storage==3.2.0
 google-crc32c==1.7.1
+google-genai==1.26.0
 google-resumable-media==2.7.2
 googleapis-common-protos==1.70.0
-grpcio==1.73.0
-grpcio-status==1.73.0
+grpcio==1.73.1
+grpcio-status==1.73.1
 h11==0.16.0
 h2==4.2.0
 hpack==4.1.0
@@ -49,32 +51,34 @@ Jinja2==3.1.6
 jsonpatch==1.33
 jsonpointer==3.0.0
 langchain==0.3.26
-langchain-community==0.3.26
-langchain-core==0.3.66
-langchain-google-firestore==0.5.0
-langchain-google-genai==2.1.5
+langchain-community==0.3.27
+langchain-core==0.3.69
+langchain-google-firestore==0.3.0
+langchain-google-genai==2.1.8
 langchain-mongodb==0.6.2
-langchain-ollama==0.3.3
+langchain-ollama==0.3.5
 langchain-text-splitters==0.3.8
-langgraph==0.4.9
-langgraph-checkpoint==2.1.0
-langgraph-prebuilt==0.2.2
-langgraph-sdk==0.1.70
-langsmith==0.4.1
+langgraph==0.5.3
+langgraph-checkpoint==2.1.1
+langgraph-prebuilt==0.5.2
+langgraph-sdk==0.1.73
+langsmith==0.4.8
 lark==1.2.2
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 marshmallow==3.26.1
 mdurl==0.1.2
+milvus-lite==2.4.12
 more-itertools==10.7.0
 msgpack==1.1.1
 multidict==6.6.3
 mypy_extensions==1.1.0
 numpy==2.0.2
 ollama==0.5.1
-orjson==3.10.18
+orjson==3.11.0
 ormsgpack==1.10.0
-packaging==24.2
+packaging==25.0
+pandas==2.3.1
 propcache==0.3.2
 proto-plus==1.26.1
 protobuf==6.31.1
@@ -86,28 +90,35 @@ pydantic-settings==2.10.1
 pydantic_core==2.33.2
 Pygments==2.19.2
 PyJWT==2.10.1
+pymilvus==2.4.9
 pymongo==4.13.2
 pyparsing==3.2.3
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
 python-multipart==0.0.20
+pytz==2025.2
 PyYAML==6.0.2
 requests==2.32.4
 requests-toolbelt==1.0.0
 rich==14.0.0
-rich-toolkit==0.14.7
+rich-toolkit==0.14.8
 rsa==4.9.1
 shellingham==1.5.4
+six==1.17.0
 sniffio==1.3.1
 SQLAlchemy==2.0.41
-starlette==0.46.2
-tenacity==9.1.2
+starlette==0.47.2
+tenacity==8.5.0
+tqdm==4.67.1
 typer==0.16.0
 typing-inspect==0.9.0
 typing-inspection==0.4.1
-typing_extensions==4.14.0
+typing_extensions==4.14.1
+tzdata==2025.2
+ujson==5.10.0
 uritemplate==4.2.0
 urllib3==2.5.0
-uvicorn==0.34.3
+uvicorn==0.35.0
 uvloop==0.21.0
 watchfiles==1.1.0
 websockets==15.0.1
