--- a/requirements.txt
+++ b/requirements.txt
@@ -19,9 +19,11 @@ environs==9.5.0
 exceptiongroup==1.3.0
 fastapi==0.116.1
 fastapi-cli==0.0.8
+filelock==3.18.0
 filetype==1.2.0
 firebase_admin==7.0.0
 frozenlist==1.7.0
+fsspec==2025.5.1
 google-ai-generativelanguage==0.6.18
 google-api-core==2.25.1
 google-api-python-client==2.176.0
@@ -39,12 +41,14 @@ grpcio==1.73.1
 grpcio-status==1.73.1
 h11==0.16.0
 h2==4.2.0
+hf-xet==1.1.4
 hpack==4.1.0
 httpcore==1.0.9
 httplib2==0.22.0
 httptools==0.6.4
 httpx==0.28.1
 httpx-sse==0.4.1
+huggingface-hub==0.33.0
 hyperframe==6.1.0
 idna==3.10
 Jinja2==3.1.6
@@ -55,6 +59,7 @@ langchain-community==0.3.27
 langchain-core==0.3.69
 langchain-google-firestore==0.3.0
 langchain-google-genai==2.1.8
+langchain-huggingface==0.3.0
 langchain-mongodb==0.6.2
 langchain-ollama==0.3.5
 langchain-text-splitters==0.3.8
@@ -79,6 +84,7 @@ orjson==3.11.0
 ormsgpack==1.10.0
 packaging==25.0
 pandas==2.3.1
+pillow==11.3.0
 propcache==0.3.2
 proto-plus==1.26.1
 protobuf==6.31.1
@@ -92,6 +98,7 @@ Pygments==2.19.2
 PyJWT==2.10.1
 pymilvus==2.4.9
 pymongo==4.13.2
+PyMuPDF==1.26.1
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
@@ -109,6 +116,7 @@ sniffio==1.3.1
 SQLAlchemy==2.0.41
 starlette==0.47.2
 tenacity==8.5.0
+tokenizers==0.21.1
 tqdm==4.67.1
 typer==0.16.0
 typing-inspect==0.9.0
